<resources>
    <string name="app_name">CrmApp</string>
    <string name="support">Support</string>
    <string name="projects">Projects</string>
    <string name="contracts">Contracts</string>
    <string name="proposals">Proposals</string>
    <string name="company_profile">Company Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Sign in to continue...</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ? </string>
    <string name="reset_now">Reset Now</string>
    <string name="support_tickets">Support Tickets</string>
    <string name="project">Projects</string>
    <string name="total">Total</string>
    <string name="pending">Pending</string>
    <string name="empty_field_check">Enter Email and Password</string>
    <string name="email_check">Enter Email Address</string>
    <string name="password_check">Enter Password</string>
    <string name="email_validation">Invalid Email Address</string>
    <string name="wait_msg">Please wait...</string>
    <string name="network_error">Internet Connection Error</string>
    <string name="empty_update_error">There is Nothing to Update</string>
    <string name="edit">Edit</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_reply">Add Reply</string>
    <string name="attach_from_file"> From File</string>
    <string name="attach_from_drive"> From Drive</string>
    <string name="attach_from_gallery"> From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="ticket_subject">Enter ticket Subject</string>
    <string name="ticket_description">Enter Ticket Description</string>
    <string name="ticket_attachment">Select ticket Attachment</string>
    <string name="empty_ticket_data">There is no Ticket Data</string>
    <string name="reply_check">Add Reply Message</string>
    <string name="ticket_id_check">Ticket id is Required</string>
    <string name="company">Company</string>
    <string name="gstin_number">GSTIN Number</string>
    <string name="phone">phone</string>
    <string name="website">Website</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
</resources>
