<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text"
        android:layout_alignParentTop="true"
        android:text="@string/welcome"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_color"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:textSize="@dimen/med_text"
        android:text="@string/welcome_text"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/light_grey"
        android:id="@+id/textView2" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView2"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/logo"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/rectangular_shape">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_email_image"/>
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_size"
                android:background="@null"
                android:gravity="start|center"
                android:paddingRight="10dp"/>
        </LinearLayout>
       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangular_shape"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_size"
                android:background="@null"
                android:gravity="start|center"
                android:paddingRight="10dp"/>

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20dp"/>-->

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangular_blue_drawable"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:typeface="monospace" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/light_grey"/>
    <TextView
        android:id="@+id/reset"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/reset_now"
        android:textColor="@color/green"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
