<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/white"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:text="Attach Files"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_blue"/>
    <TextView
        android:id="@+id/attach_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:text="@string/attach_from_file"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
   <!-- <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_blue"/>
    <TextView
        android:id="@+id/drive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:padding="15dp"
        android:textSize="@dimen/text_size"
        android:text="@string/attach_from_drive"
        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_blue"/>
    <TextView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:padding="15dp"
        android:text="@string/attach_from_gallery"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_blue"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>